# nasm-plugin

./: .gitignore  README.md  build.gradle.kts  gradle.properties  instruction_db_tool.py  settings.gradle.kts
examples/: 01_hello_world.asm  02_basic_syntax.asm  03_macros.asm  04_advanced_features.asm  05_string_reverse.asm  06_segment_override.asm  07_memory_operations.asm  08_macro_indirection.asm  09_parser_test_cases.asm  10_avx512_features.asm  11_interrupt_handler.asm  12_kernel_entry.asm
src/main/grammar/: Nasm.bnf  Nasm.flex
src/main/resources/inspectionDescriptions/: NasmInactiveConditionalBranch.html  NasmMacroRedefinition.html  NasmUnusedSymbol.html
src/main/resources/nasm/: directives.xml  instructions.xml  preprocessor-functions.xml  registers.xml  syntax-templates.xml
src/test/testData/parser/: addressing_modes.asm  avx512_features.asm  complex_macros.asm  edge_cases.asm  preprocessor_conditionals.asm
src/test/testData/parser/addressing/: direct_addressing.asm  displacement_addressing.asm  indirect_addressing.asm  rip_relative_addressing.asm  scaled_index_addressing.asm
src/test/testData/parser/comments/: comments_in_macros.asm  multi_line_comments.asm  single_line_comments.asm
src/test/testData/parser/data/: data_definitions.asm  data_strings.asm  data_with_dup.asm  data_with_question_mark.asm  floating_point_data.asm  reserve_space.asm
src/test/testData/parser/directives/: align_directive.asm  bits_directive.asm  common_directive.asm  cpu_directive.asm  default_directive.asm  (+5 more)
src/test/testData/projectmodel/cmake-project/: CMakeLists.txt
(+241 files in other folders)
